test/libsolidity/syntaxTests/functionTypes/internal_function_type_to_address.sol
contract C {
    function f() public returns (address) {
        return address(f);
    }
}
// ----
// TypeError: Explicit type conversion not allowed from "function () returns (address)" to "address".
